--- a/about.html
+++ b/about.html
@@ -92,61 +92,28 @@
 
           <p class="cv-subtitle">APPOINTMENTS</p>
           <ul class="cv-list">
-            <li>
-              <p class="cv-item"><b>Mellon Associate Research Scholar</b> - <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a>, Columbia University, New York, NY (2015 - Present)</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Adjunct Assistant Professor</b> - <a href="http://www.arch.columbia.edu/">Graduate School of Architecture, Planning and Preservation</a>, Columbia University, New York, NY (2013 - Present)</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Associate Research Scholar</b> - <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, Columbia University, New York, NY (2013 - 2015)</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Architectural Designer</b> - <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a>, New York, NY (2012 - 2013)</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>GIS Project Coordinator</b> - <a href="http://catholiccharitiesny.org/">Catholic Charities, Archdioceses of New York</a>, New York, NY (2009)</p>
-            </li>
+            <li><p class="cv-item"><b>Mellon Associate Research Scholar</b> - <a href="http://c4sr.columbia.edu/">Center for Spatial Research</a>, Columbia University, New York, NY (2015 - Present)</p></li>
+            <li><p class="cv-item"><b>Adjunct Assistant Professor</b> - <a href="http://www.arch.columbia.edu/">Graduate School of Architecture, Planning and Preservation</a>, Columbia University, New York, NY (2013 - Present)</p></li>
+            <li><p class="cv-item"><b>Associate Research Scholar</b> - <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, Columbia University, New York, NY (2013 - 2015)</p></li>
+            <li><p class="cv-item"><b>Architectural Designer</b> - <a href="http://www.cz-studio.com/">Carlos Zapata Studio</a>, New York, NY (2012 - 2013)</p></li>
+            <li><p class="cv-item"><b>GIS Project Coordinator</b> - <a href="http://catholiccharitiesny.org/">Catholic Charities, Archdioceses of New York</a>, New York, NY (2009)</p></li>
           </ul>
 
           <p class="cv-subtitle">PROJECTS</p>
           <ul class="cv-list">
-            <li>
-              <p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/conflict-urbanism-colombia">Conflict Urbanism: Colombia</a></b> - An interactive mapping and spatial analysis project examining the Colombian conflict and its effect in the urban environment. Kurgan, L., Saldarriaga, J., Rettberg, A. (in progress).</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="https://science-surveyor.github.io/">Science Surveyor</a></b> - Context on Deadline - An interactive application providing context information for science journalists on a deadline. Holloway, M., Tenen, D., Kurgan, L., Jurafsky, D., McFarland, D., Saldarriaga, J., Basic, G. (in progress).</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Trip Generation by Multiple Modes</b> - Combining data to measure demand from shared travel activities. Saldarriaga, J., King, D. (in progress).</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/banking-divide-taxi-access-evidence-new-york-city">Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</a></b> - A statistical analysis of taxicab payment methods and its correlation with banking service accessibility. Saldarriaga, J., King, D., 2015 - 2016.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - A statistical and mapping analysis of the environmental cost associated with the spatial regulation of taxicabs in New York City. Saldarriaga, J., King, D., 2016.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="http://spatialinformationdesignlab.org/project_sites/the-haven-project/">The Haven Project - Metrics</a></b> - An interactive data visualization project analyzing health and environmental metrics for New York City. Kurgan, L., Saldarriaga, J., Izen, J., New York Restoration Project, 2015.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/citibike-rebalancing-study">Citibike Station Imbalances & Citibike Rides</a></b> - Data visualization and mapping projects studying Citibike usage, activity data and station imbalances. Saldarriaga, J., King, D., Kaufman, S., Ferzoco, J., 2014.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Where Were Bike Share Trips Before Bike Share? Evidence From New York City</b> - A spatial analysis of the relationship between bike share and taxicab trips in New York City. King, D., Saldarriaga, J., 2014.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b>Modeling Social Justice Issues in Urban Zones Using Big Data: Evidence from Bikeshare and Taxicab Data</b> - A statistical analysis of the spatial distribution of bike share and taxicab trips and their relation to social justice issues. King, D., Peters, J., Davidson, A., Saldarriaga, J., 2014.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="http://spatialinformationdesignlab.org/project_sites/port_to_port/">Port to Port</a></b> - An interactive data visualization and mappin analysis of 6 years of oil shipment routes to and from U.S. ports. Kurgan, L., Saldarriaga, J., Berner, A., Murray., S., 2014.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="http://cargocollective.com/juanfrans/NYC-TAXI-ACTIVITY">NYC Taxi Activity</a></b> - Data visualization animations illustrating movement and imbalance patterns in New York City taxicabs. Saldarriaga, J., King, D., Peters, J., 2012.</p>
-            </li>
-            <li>
-              <p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/here-now-social-media-and-psychological-city">Here Now! Social Media And The Psychological City</a></b> - Data visualization and mapping project studying social median check-ins in New York City. Williams, S., Saldarriaga, J., Bullen, G., Tan, F., Youse, N., 2011.</p>
-            </li>
+            <li><p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/conflict-urbanism-colombia">Conflict Urbanism: Colombia</a></b> - An interactive mapping and spatial analysis project examining the Colombian conflict and its effect in the urban environment. Kurgan, L., Saldarriaga, J., Rettberg, A. (in progress).</p></li>
+            <li><p class="cv-item"><b><a href="http://xpmethod.plaintext.in/embodied-space-lab/mapping-mughal-hindustan.html">Mapping Mughal Hindustan, 1500 - 1600 CE</a></b> - An scholarly and interactive mapping project which re-frames the various sites of early Mughal Hindustan as affective geography. Ahmed, M., Saldarriaga, J., Devulapalli, S., Fattaleh, N., Sá Pereira, M., 2017.</p></li>
+            <li><p class="cv-item"><b><a href="https://science-surveyor.github.io/">Science Surveyor</a></b> - Context on Deadline - An interactive application providing context information for science journalists on a deadline. Holloway, M., Tenen, D., Kurgan, L., Jurafsky, D., McFarland, D., Saldarriaga, J., Basic, G. (in progress).</p></li>
+            <li><p class="cv-item"><b>Trip Generation by Multiple Modes</b> - Combining data to measure demand from shared travel activities. Saldarriaga, J., King, D. (in progress).</p></li>
+            <li><p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/banking-divide-taxi-access-evidence-new-york-city">Access to Taxicabs for Unbanked Households: An Exploratory Analysis in New York City</a></b> - A statistical analysis of taxicab payment methods and its correlation with banking service accessibility. Saldarriaga, J., King, D., 2015 - 2016.</p></li>
+            <li><p class="cv-item"><b>Environmental Costs of Spatial Regulation of Taxicabs</b> - A statistical and mapping analysis of the environmental cost associated with the spatial regulation of taxicabs in New York City. Saldarriaga, J., King, D., 2016.</p></li>
+            <li><p class="cv-item"><b><a href="http://spatialinformationdesignlab.org/project_sites/the-haven-project/">The Haven Project - Metrics</a></b> - An interactive data visualization project analyzing health and environmental metrics for New York City. Kurgan, L., Saldarriaga, J., Izen, J., New York Restoration Project, 2015.</p></li>
+            <li><p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/citibike-rebalancing-study">Citibike Station Imbalances & Citibike Rides</a></b> - Data visualization and mapping projects studying Citibike usage, activity data and station imbalances. Saldarriaga, J., King, D., Kaufman, S., Ferzoco, J., 2014.</p></li>
+            <li><p class="cv-item"><b>Where Were Bike Share Trips Before Bike Share? Evidence From New York City</b> - A spatial analysis of the relationship between bike share and taxicab trips in New York City. King, D., Saldarriaga, J., 2014.</p></li>
+            <li><p class="cv-item"><b>Modeling Social Justice Issues in Urban Zones Using Big Data: Evidence from Bikeshare and Taxicab Data</b> - A statistical analysis of the spatial distribution of bike share and taxicab trips and their relation to social justice issues. King, D., Peters, J., Davidson, A., Saldarriaga, J., 2014.</p></li>
+            <li><p class="cv-item"><b><a href="http://spatialinformationdesignlab.org/project_sites/port_to_port/">Port to Port</a></b> - An interactive data visualization and mappin analysis of 6 years of oil shipment routes to and from U.S. ports. Kurgan, L., Saldarriaga, J., Berner, A., Murray., S., 2014.</p></li>
+            <li><p class="cv-item"><b><a href="http://cargocollective.com/juanfrans/NYC-TAXI-ACTIVITY">NYC Taxi Activity</a></b> - Data visualization animations illustrating movement and imbalance patterns in New York City taxicabs. Saldarriaga, J., King, D., Peters, J., 2012.</p></li>
+            <li><p class="cv-item"><b><a href="http://c4sr.columbia.edu/projects/here-now-social-media-and-psychological-city">Here Now! Social Media And The Psychological City</a></b> - Data visualization and mapping project studying social median check-ins in New York City. Williams, S., Saldarriaga, J., Bullen, G., Tan, F., Youse, N., 2011.</p></li>
           </ul>
 
           <p class="cv-subtitle">PUBLICATIONS</p>
